--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-01-20  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* configure.ac: Report missing gensub-capable awk at configure
+	time.
+
 2023-01-19  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* man/Makefile.am (man_MANS): Add poked.
