--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-01-23  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pvm-val.c (pvm_sizeof): Add case for `PVM_NULL'.
+	* libpoke/pvm.jitter (siz): Add a comment describing special
+	cases.
+
 2023-01-20  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* configure.ac: Report missing gensub-capable awk at configure
