--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2023-01-22  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* doc/poke.texi (typeof): New section.
+
+2023-01-22  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-ast.h: Prototype for pkl_asm_struct_type_method_p.
 	Prototype for pkl_asm_get_struct_type_field.
 	* libpoke/pkl-ast.c (pkl_asm_get_struct_type_method): New
