--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2023-01-23  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pvm.jitter (PVM_BINOP_SL): Do not trigger left-shit UB.
+
+2023-01-23  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-fold.c (pkl_phase_fold): Remove duplicated handler
 	entry.
 	* libpoke/pkl-trans.c (pkl_phase_trans1): Likewise.
