--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-01-23  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* poked/poked.c (poked_version): Don't use year range.
+
 2023-01-23  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pvm.jitter (PVM_BINOP_SL): Do not trigger left-shit UB.
