THANKS: thank Arsen Arsenović
* THANKS: Documentation.

--- a/THANKS
+++ b/THANKS
@@ -40,6 +40,8 @@ important.
   appreciated its complexity.  Interacting with him was particularly pleasant
   and motivating.
 
+* Arsen Arsenović for his tireless and precise bug reporting.
+
 * Darshit Shah reported several bugs in a very precise way, more than once
   providing fixes.
 
