--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-01-24  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* configure.ac: Bump version number to 2.90.1.
+	* NEWS: Likewise.
+
 2023-01-24  Jose E. Marchesi  <jose.marchesi@oracle.com>
 
 	* libpoke/Makefile.am (uninstall-sources): New rule.
